--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,41 +1,19 @@
-# Sử dụng base image của Python
-FROM python:3.11-slim
+FROM python:3.9-slim
 
-# Cài đặt các gói hệ thống cần thiết cho Chromium
+# Cài đặt Chrome và các công cụ cần thiết
 RUN apt-get update && apt-get install -y \
-    chromium \
-    chromium-chromedriver \
-    libglib2.0-0 \
-    libnss3 \
-    libnspr4 \
-    libdbus-1-3 \
-    libatk1.0-0 \
-    libatk-bridge2.0-0 \
-    libcups2 \
-    libdrm2 \
-    libxcomposite1 \
-    libxdamage1 \
-    libxfixes3 \
-    libxrandr2 \
-    libxkbcommon0 \
-    libx11-6 \
-    libxcb1 \
-    libgbm1 \
-    libasound2 \
-    libatspi2.0-0 \
-    libxext6 \
-    --no-install-recommends \
-    && rm -rf /var/lib/apt/lists/*
+    google-chrome-stable \
+    wget \
+    unzip && \
+    rm -rf /var/lib/apt/lists/*
 
-# Thiết lập thư mục làm việc
+# Cài đặt các thư viện Python
+COPY requirements.txt /app/requirements.txt
 WORKDIR /app
+RUN pip install -r requirements.txt
 
-# Sao chép tệp requirements.txt và cài đặt các gói Python
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy mã nguồn
+COPY . /app
 
-# Sao chép toàn bộ mã nguồn của bạn vào thư mục làm việc
-COPY . .
-
-# Chỉ định lệnh mặc định để chạy ứng dụng của bạn
-CMD ["python", "app.py"]
+# Chạy ứng dụng
+CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "app:app"]
